--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ p {
 
   text-overflow:    ellipsis;
 }
-	
+
 </style>
 
 
 </head>
-<body background="http://4.bp.blogspot.com/-GGcY65QXkKs/VWeRYEV4HRI/AAAAAAAAGCs/4J8181mq99U/s1600/fundos-para-fotos-preto%2B%25282%2529.jpg">
+<body style="background-color: black;">
 
 <div class="container">
 	<div class="row" id="conteudo">
@@ -73,7 +73,7 @@ p {
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+<script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 
 <script type="text/javascript">
 	
