--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p {
 </head>
 <body style="background-color: black;">
 
-<div class="container">
+<div class="container-fluid">
   
   <div class="jumbotron">
   <h1>.Net Coders</h1>
